# fusion_utils

./: README.md  explore.py  fusion.py  pyproject.toml
data/: codex_marker.xlsx  titration-rerun-150ms-C1.xpd
data/output/: test_final.xpd  titration-rerun-150ms-C1.xpd
data/raw/: input_param.json  test_final.xpd
fusion_utils/: generate_fusion_xpd.py
src/: generate_fusion_xpd.py
