[project]
name = "fusion-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
]

[tool.setuptools.packages.find]
exclude = ["data"]

[project.scripts]
generate_fusion_xpd = "fusion_utils.generate_fusion_xpd:main"
